--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "axios": "^0.19.0",
+    "date-fns": "^2.5.1",
+    "font-awesome": "^4.7.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.5",
+    "react-scripts": "3.2.0",
+    "react-social-login-buttons": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
